    updated to use the new Dpkg::Control interface.
  * Create Launchpad-Bugs-Fixed directly in the changelog parsing code thanks
    to a new vendor hook post-process-changelog-entry. Closes: #536066
  * Integrate dpkg-ftp into dselect. Add the required Replaces and Conflicts.
  * dpkg-scanpackages/dpkg-scansources now supports compressed override files.

  [ Updated dpkg translations ]
  * German (Sven Joachim).
  * Czech (Miroslav Kure).
  * Polish (Wiktor Wandachowicz). Closes: #548541
  * Italian (Milo Casagrande). Closes: #548615

  [ Updated dselect translations ]
  * German (Sven Joachim).
  * Czech (Miroslav Kure).
  * Polish (Wiktor Wandachowicz). Closes: #548541

  [ Updated man page translations ]
  * German (Helge Kreutzmann).
  * French translation error fixed (Christian Perrier)
    Thanks to Pietro Battiston for spotting it
    Closes: #545446
  * Polish (Wiktor Wandachowicz). Closes: #548541

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).
  * Polish (Wiktor Wandachowicz). Closes: #548541

 -- Guillem Jover <guillem@debian.org>  Sun, 06 Sep 2009 09:48:45 +0200

dpkg (1.15.4) unstable; urgency=low

  [ Guillem Jover ]
  * Call _g instead of g_ in dpkg-name.
  * Fix inverted logic when deciding to assume the architecture in dpkg-name
    when the package didn't have such field.
  * Do not take into account Revision and Package_Revision fields in dpkg-name
    and dpkg-scanpackages as they have been handled already by “dpkg-deb -I”.
  * Switch dpkg-scansources to use Dpkg::Cdata instead of duplicating the
    .dsc parsing code. As a side effect it now handles properly bogus files.
  * Do not remap obsolete fields in dpkg-scanpackages as they have been
    handled already by “dpkg-deb -I”.
  * Properly mark packages being purged for disappearance from the database.
    This will make the status database not be left behind with traces of old
    not-installed packages. Closes: #472208