@@ -91,6 +91,11 @@ scanning for all debs,
 .BR \-m ", " \-\-multiversion
 Include all found packages in the output.
 .TP
+.BR \-M ", " \-\-medium " \fIid\-string\fP"
+Add an X-Medium field containing the value \fIid\-string\fP. This field
+is required if you want to generate \fBPackages.cd\fP files for use
+by the multicd access method of dselect.
+.TP
 .BR \-h ", " \-\-help
 Show the usage message and exit.
 .TP
