@@ -46,6 +46,9 @@ dpkg (1.15.5) UNRELEASED; urgency=low
     to a new vendor hook post-process-changelog-entry. Closes: #536066
   * Integrate dpkg-ftp into dselect. Add the required Replaces and Conflicts.
   * dpkg-scanpackages/dpkg-scansources now supports compressed override files.
+  * dpkg-scanpackages now supports a new --medium option as needed to
+    generate Packages.cd file for consumption by the multicd dselect access
+    method. Closes: #402527
 
   [ Updated dpkg translations ]
   * German (Sven Joachim).
